@@ -1,0 +1,57 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<html>
+<head>
+<title>JAIL: Just Another Interpreted Language</title>
+<meta http-equiv="content-type" content=
+"text/html; charset=us-ascii">
+</head>
+<body>
+<link href="jail.css" rel=stylesheet type="text/css"/>
+<a name="top"/>
+<div align="center"><img src="jail-banner.png" alt=
+"Just Another Interpreted Language">
+</div>
+<iframe src="menu.html" type="text/html" width="100%" height="50" frameborder=0 scrolling="no">
+<p>The menu should be here..</p>
+</iframe>
+<table style="width: 100%"> 
+<tbody>
+<tr>
+<td style="width: 20%;" valign="top">
+<iframe src="table_dev.html" type="text/html" width="100%" height="800" frameborder=0>
+<p>The TOC should be here..</p>
+</iframe>
+</td>
+<td valign="top">
+<div align="justify">
+
+<!-- PUT YOUR TEXT HERE -->
+
+
+
+
+
+
+</div>
+</td>
+<td style="width: 20%;" valign="top">
+<!--  RIGHT-HAND SIDE TEXT HERE -->
+</td>
+</tr>
+</tbody>
+</table>
+<table width="100%">
+<tbody>
+<tr>
+<td style="vertical-align: bottom; text-align: left; font-size: smaller;">This site is hosted by:<br/>
+<a href=
+"http://sourceforge.net"><img src=
+"http://sourceforge.net/sflogo.php?group_id=85312&amp;type=5"
+width="210" height="62" border="0" align="right" alt=
+"SourceForge.net Logo"></a>
+</td><td style="vertical-align: bottom; text-align: right; font-size: smaller;">
+<a href="#top">back to top</a><br/>
+This page was last updated: $Date: 2004/02/03 10:34:49 $
+</td></tr></tbody></table>
+</body>
+</html>
