@@ -1,3 +1,6 @@
+2004-02-03	blytkerchan
+	* empty_dev.html, empty_lang.html: new files
+
 2004-02-02	blytkerchan
 	* ChangeLog: correct dates
 	* design.html, development.html, empty.html, goals.html, how_you_can_help.html, index.html, jailop.html, jailtype.html, language.html, license.html, progress.html, tech_arch.html: add menu bar
